--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "powerbi-visuals-sunburst",
   "description": "SunBurst chart.",
-  "version": "2.5.0",
+  "version": "2.5.0.0",
   "author": {
     "name": "Microsoft",
     "email": "pbicvsupport@microsoft.com"
@@ -23,60 +23,54 @@
     "url": "git+https://github.com/Microsoft/PowerBI-visuals-sunburst.git"
   },
   "devDependencies": {
-    "@types/d3-hierarchy": "^2.0.0",
-    "@types/d3-selection": "^2.0.0",
-    "@types/d3-shape": "^2.0.0",
-    "@types/jasmine": "^3.6.2",
-    "@types/jasmine-jquery": "^1.5.33",
-    "@types/jquery": "3.5.5",
-    "@types/karma": "^6.3.4",
-    "@types/lodash": "4.14.166",
-    "@types/webpack": "4.41.25",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "coveralls": "^3.1.0",
-    "css-loader": "^5.0.1",
+    "@types/d3-hierarchy": "^3.1.7",
+    "@types/d3-selection": "^3.0.10",
+    "@types/d3-shape": "^3.1.6",
+    "@types/jasmine": "^5.1.4",
+    "@types/karma": "^6.3.8",
+    "@types/lodash": "4.17.4",
+    "@types/webpack": "5.28.5",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "css-loader": "^7.1.2",
     "d3-hierarchy": "^3.1.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
-    "eslint": "^8.43.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-powerbi-visuals": "^0.8.1",
     "jasmine": "^5.1.0",
-    "jasmine-core": "^5.1.0",
+    "jasmine-core": "^5.1.2",
     "jasmine-jquery": "^2.1.1",
-    "jquery": "^3.7.0",
-    "karma": "^6.4.2",
+    "jquery": "^3.7.1",
+    "karma": "^6.4.3",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^5.1.0",
     "karma-junit-reporter": "^2.0.1",
-    "karma-remap-istanbul": "^0.0.2",
-    "karma-sourcemap-loader": "^0.3.8",
-    "karma-typescript": "^5.2.0",
+    "karma-sourcemap-loader": "^0.4.0",
+    "karma-typescript": "^5.5.4",
     "karma-typescript-preprocessor": "^0.4.0",
-    "karma-webpack": "^5.0.0",
-    "less": "^4.0.0",
-    "less-loader": "^7.2.1",
-    "lodash-es": "^4.17.20",
+    "karma-webpack": "^5.0.1",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
+    "lodash-es": "^4.17.21",
     "postcss-less": "^6.0.0",
-    "powerbi-models": "^1.7.0",
-    "powerbi-visuals-api": "~5.4.0",
-    "powerbi-visuals-tools": "^5.0.2",
-    "powerbi-visuals-utils-chartutils": "^6.0.1",
-    "powerbi-visuals-utils-colorutils": "^6.0.1",
-    "powerbi-visuals-utils-dataviewutils": "^2.4.0",
+    "powerbi-visuals-api": "~5.9.1",
+    "powerbi-visuals-tools": "^5.4.3",
+    "powerbi-visuals-utils-chartutils": "^6.0.4",
+    "powerbi-visuals-utils-colorutils": "^6.0.4",
+    "powerbi-visuals-utils-dataviewutils": "^6.1.0",
     "powerbi-visuals-utils-formattingmodel": "^5.0.1",
-    "powerbi-visuals-utils-formattingutils": "^6.0.1",
-    "powerbi-visuals-utils-interactivityutils": "^6.0.2",
-    "powerbi-visuals-utils-svgutils": "^6.0.1",
-    "powerbi-visuals-utils-testutils": "^6.0.1",
-    "powerbi-visuals-utils-tooltiputils": "^2.5.2",
-    "powerbi-visuals-utils-typeutils": "^6.0.1",
-    "puppeteer": "^5.5.0",
-    "style-loader": "^2.0.0",
-    "stylelint": "^14.16.1",
-    "ts-loader": "^8.0.12",
-    "ts-node": "^10.8.1",
+    "powerbi-visuals-utils-formattingutils": "^6.1.1",
+    "powerbi-visuals-utils-interactivityutils": "^6.0.4",
+    "powerbi-visuals-utils-svgutils": "^6.0.4",
+    "powerbi-visuals-utils-testutils": "^6.1.1",
+    "powerbi-visuals-utils-tooltiputils": "^6.0.4",
+    "powerbi-visuals-utils-typeutils": "^6.0.3",
+    "playwright-chromium": "^1.44.1",
+    "style-loader": "^4.0.0",
+    "stylelint": "^16.6.0",
+    "ts-loader": "^9.5.1",
     "typescript": "^4.9.5"
   }
 }
