--- a/package.json
+++ b/package.json
@@ -28,13 +28,9 @@
     "@types/d3-shape": "^3.1.6",
     "@types/jasmine": "^5.1.4",
     "@types/karma": "^6.3.8",
-    "@types/lodash": "4.17.4",
     "@types/webpack": "5.28.5",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "css-loader": "^7.1.2",
-    "d3-hierarchy": "^3.1.2",
-    "d3-selection": "^3.0.0",
-    "d3-shape": "^3.2.0",
     "eslint": "^8.57.0",
     "eslint-plugin-powerbi-visuals": "^0.8.1",
     "jasmine": "^5.1.0",
@@ -53,11 +49,20 @@
     "karma-webpack": "^5.0.1",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
-    "lodash-es": "^4.17.21",
     "playwright-chromium": "^1.44.1",
     "postcss-less": "^6.0.0",
-    "powerbi-visuals-api": "~5.9.1",
     "powerbi-visuals-tools": "^5.4.3",
+    "powerbi-visuals-utils-testutils": "^6.1.1",
+    "style-loader": "^4.0.0",
+    "stylelint": "^16.6.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "d3-hierarchy": "^3.1.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
+    "powerbi-visuals-api": "~5.9.1",
     "powerbi-visuals-utils-chartutils": "^6.0.4",
     "powerbi-visuals-utils-colorutils": "^6.0.4",
     "powerbi-visuals-utils-dataviewutils": "^6.1.0",
@@ -65,12 +70,7 @@
     "powerbi-visuals-utils-formattingutils": "^6.1.1",
     "powerbi-visuals-utils-interactivityutils": "^6.0.4",
     "powerbi-visuals-utils-svgutils": "^6.0.4",
-    "powerbi-visuals-utils-testutils": "^6.1.1",
     "powerbi-visuals-utils-tooltiputils": "^6.0.4",
-    "powerbi-visuals-utils-typeutils": "^6.0.3",
-    "style-loader": "^4.0.0",
-    "stylelint": "^16.6.0",
-    "ts-loader": "^9.5.1",
-    "typescript": "^4.9.5"
+    "powerbi-visuals-utils-typeutils": "^6.0.3"
   }
 }
